add table «BoxArguments» in db schemas

--- a/versions/v0.2/analyse/DB schéma/html-docs/contents/ffbe44fee7ffea54656e6944f153ba35.html
+++ b/versions/v0.2/analyse/DB schéma/html-docs/contents/ffbe44fee7ffea54656e6944f153ba35.html
@@ -245,7 +245,7 @@
           </tr>
           
           <tr>
-            <td><a href="bf486aa7da03484bc2db8dfe8780f718.html">price</a></td>
+            <td><a href="bf486aa7da03484bc2db8dfe8780f718.html">shipPrice</a></td>
             <td>DOUBLE</td>
             <td><span class='label label-info'>false</span></td>
             <td><span class='label label-info'>false</span></td>
