update db's models

--- a/versions/v0.2/analyse/DB schéma/html-docs/contents/30271f3e564ec8c879856a9c10ab92e3.html
+++ b/versions/v0.2/analyse/DB schéma/html-docs/contents/30271f3e564ec8c879856a9c10ab92e3.html
@@ -64,7 +64,7 @@
         <h3>Description</h3>
         <div>
           
-            <h1>definition</h1>
+            <h1>Description</h1>
 
 <p>Set true to indicate that this cookie can be given only in a secured connection (https)</p>
           
