--- a/versions/v0.2/analyse/DB schéma/html-docs/contents/4358a3cdf3f3db29c89d067e6f6bb076.html
+++ b/versions/v0.2/analyse/DB schéma/html-docs/contents/4358a3cdf3f3db29c89d067e6f6bb076.html
@@ -64,7 +64,7 @@
         <h3>Description</h3>
         <div>
           
-            <h1>definition</h1>
+            <h1>Description</h1>
 
 <p>the domain where the cookie will be available
 • ex: iadnmeim.com</p>
