--- a/versions/v0.2/analyse/DB schéma/html-docs/contents/678994f98e89c531670ef3caf66c61da.html
+++ b/versions/v0.2/analyse/DB schéma/html-docs/contents/678994f98e89c531670ef3caf66c61da.html
@@ -64,7 +64,7 @@
         <h3>Description</h3>
         <div>
           
-            <h1>definition</h1>
+            <h1>Description</h1>
 
 <p>Set true to indicate that this cookie can get only through a http protocol.
 Its mean that the cookie con&#39;t be get with a script language like Javascript</p>
