--- a/versions/v0.2/analyse/DB schéma/html-docs/contents/053d0a9ddd5cd7dad24c0a6a7e8b775c.html
+++ b/versions/v0.2/analyse/DB schéma/html-docs/contents/053d0a9ddd5cd7dad24c0a6a7e8b775c.html
@@ -64,7 +64,7 @@
         <h3>Description</h3>
         <div>
           
-            <h1>definition</h1>
+            <h1>Description</h1>
 
 <p>the directory where the cookie will be available
 • ex: /my/directory</p>
