update db's models

--- a/versions/v0.2/analyse/DB schéma/html-docs/contents/56f42be50507904716b475d657091e5e.html
+++ b/versions/v0.2/analyse/DB schéma/html-docs/contents/56f42be50507904716b475d657091e5e.html
@@ -254,7 +254,7 @@
           </tr>
           
           <tr>
-            <td><a href="30034ab7fa3ec37423a83705cb4454bc.html">settedDelay</a></td>
+            <td><a href="30034ab7fa3ec37423a83705cb4454bc.html">settedPeriod</a></td>
             <td>INTEGER</td>
             <td><span class='label label-info'>false</span></td>
             <td><span class='label label-info'>false</span></td>
