--- a/versions/v0.2/analyse/DB schéma/html-docs/contents/b648da8cfdeb0085e29301e6f830a939.html
+++ b/versions/v0.2/analyse/DB schéma/html-docs/contents/b648da8cfdeb0085e29301e6f830a939.html
@@ -211,7 +211,7 @@
           </tr>
           
           <tr>
-            <td><a href="e9aa0f50ec2cf32bf93850e7ef6d4f64.html">cookieDelay</a></td>
+            <td><a href="e9aa0f50ec2cf32bf93850e7ef6d4f64.html">cookiePeriod</a></td>
             <td>INTEGER</td>
             <td><span class='label label-info'>false</span></td>
             <td><span class='label label-info'>false</span></td>
